<resources>
    <string name="app_name">St Michael Universalapp</string>
    <string name="action_settings">Settings</string>
    <string name="st_michael_universal_app">St. Michael Universal-App</string>
    <string name="vertretungsplan">Vertretungsplan</string>
    <string name="homepage">Homepage</string>
    <string name="title_activity_vertretungsplan">Vertretungsplan</string>
    <string name="admob_pub">ca-app-pub-4511153742871799/5483025381</string>
    <!--
        admob_pub:
        ca-app-pub-4511153742871799/5483025381 = Production
        ca-app-pub-3940256099942544/6300978111 = Debug
    -->
    <string name="title_activity_homepage">Homepage</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="passwort">Passwort</string>
    <string name="schulbistum">Schulbistum</string>
    <string name="title_activity_lehrerkuerzel">Lehrerkürzel</string>
    <string name="title_activity_lehrer_kuerzel">Lehrerkürzel</string>
    <string name="lehrerk_rzel">Lehrerkürzel</string>
    <string name="kuerzel_placeholder">Serveranfrage gesendet, bitte warten...</string>
    <string name="essenbestellung">Essenbestellung</string>
    <string name="title_activity_main_page2">MainActivityPage2</string>
    <string name="seite_2_zeigen">Seite 2 zeigen</string>
    <string name="title_activity_mensa_bestellung">mensa_bestellung</string>
    <string name="title_activity_noten">Noten</string>
    <string name="bitte_wartem_datenbank_wird_erstellt_geladen">Bitte wartem, Datenbank wird erstellt/geladen...</string>
    <string name="zur_ck">Zurück</string>
    <string name="noten">Noten</string>

</resources>
